Completed Challenge Notifications

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -216,7 +216,7 @@ BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
-bUseIoStore=True
+bUseIoStore=False
 bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -353,4 +353,3 @@ DefaultObjectiveMoveToEQS=None
 [/Script/LiveLink.LiveLinkSettings]
 -DefaultRoleSettings=(Role=Class'/Script/LiveLink.LiveLinkAnimationRole', FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkAnimationFrameInterpolationProcessor')
 +DefaultRoleSettings=(Role=Class'/Script/LiveLinkInterface.LiveLinkAnimationRole', FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkAnimationFrameInterpolationProcessor')
-
